--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-streamlit==1.18.1
-numpy==1.20.0
-pandas==1.5.3
-scikit-learn==1.2.1
-scipy==1.10.0
-shap==0.41.0
-sklearn==0.0
-streamlit==1.18.1
-xgboost==1.7.3
-matplotlib==3.7.0
+matplotlib==3.5.2
+matplotlib-inline==0.1.3
+shap==0.40.0
+catboost==1.1.1
+plotly==5.10.0
+
